Removed "cover" to fix banner being cut off

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -50,7 +50,6 @@ body {
     width: 100%;
     height: 100%;
     scale: 90%;
-    object-fit: cover;
     transition: transform 0.3s ease;
     z-index: 1;
 }
